Actually did a bunch of cool stuff. This should be the version that people use.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 /dist/
 /build/
+/src/com/coolkev/syncedplay/Manual.aux
+/src/com/coolkev/syncedplay/Manual.toc
+/src/com/coolkev/syncedplay/Manual.pdf
+/src/com/coolkev/syncedplay/Manual.log
+/src/com/coolkev/syncedplay/Manual.dvi
