--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 /src/com/coolkev/syncedplay/Manual.pdf
 /src/com/coolkev/syncedplay/Manual.log
 /src/com/coolkev/syncedplay/Manual.dvi
+/ftp_access.properties
+/oldChangelogs/
