Program alerts the user when you try to close it with unsaved changes. Program title follows along with the filename of the current save file, and the save state. Cue table now stays centered. Build now makes the jar executable.

--- a/build.xml
+++ b/build.xml
@@ -15,6 +15,7 @@
       <antcall target="build-doc">
       </antcall>
       <delete file="dist/README.TXT"/>
+      <chmod file="dist/SyncedPlay.jar" perm="ugo+rx"/>
     </target>
     
     <target name="dist">
